crates/0_config/src/snapshots/sprefa_config__filter__tests__main_branch.snap
---
source: crates/0_config/src/1_filter.rs
expression: main_filter
---
mode: exclude
exclude:
  - vendor/**
include: ~
