crates/0_config/src/snapshots/sprefa_config__filter__tests__resolve_filter_falls_through_to_global.snap
---
source: crates/0_config/src/1_filter.rs
expression: result
---
mode: exclude
exclude:
  - node_modules/**
include: ~
